examples/test/testpolicy16201.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16201
  namespace: namespace122
spec:
  podSelector:
    matchLabels:
      key27: value23
      key37: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value46
      podSelector:
        matchLabels:
          key37: value19
          key43: value28
          key47: value48
